- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    5.1.1
 - 
    None
 - 
    Mac OS X 10.8.4 + Qt 5.1.1
 
- 
        9e6f0f16ab9d6c5fca1ded90dd6b3feb953712e1
 
On Mac OS X mouse cursor won't change its icon when moved over QSplitter handle if winId() of a widget placed in the splitter is accessed.
testsplitter
#include <QtWidgets> int main(int argc, char * argv[]) { QApplication app(argc, argv); QMainWindow mainWindow; QSplitter *splitter = new QSplitter; QWidget *widget1 = new QWidget; // removing the next line will fix the issue! WId winId = widget1->winId(); splitter->addWidget(widget1); splitter->addWidget(new QWidget); mainWindow.setCentralWidget(splitter); mainWindow.show(); return app.exec(); }
- is duplicated by
 - 
                    
QTBUG-52023 No cursor over QSplitter after using QMacCocoaViewContainer + QNSView mouseDragged error
-         
 - Closed
 
 -         
 
- relates to
 - 
                    
QTCREATORBUG-11168 Mouse cursor now and then disappears (and also otherwise doesn't change shape correctly)
-         
     - Closed
 
 -         
 - 
                    
QTBUG-35659 Mouse cursor handling is broken on widgets on Mac OS X
-         
 - Closed
 
 -         
 
| For Gerrit Dashboard: QTBUG-33479 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 153745,5 | Cocoa integration - set cursor on child views | dev | qt/qtbase | Status: ABANDONED | 0 | 0 | 
| 174826,11 | Cocoa: Make child window cursors work correctly | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |