Workaround for stuck cursor on OSX

Workaround for the cursor getting stuck when tablet device changes,
this is probably related to QTBUG-33479 and QTBUG-35659.